--- a/config/my_controllers.yaml
+++ b/config/my_controllers.yaml
@@ -20,16 +20,12 @@ diff_cont:
     right_wheel_names: ['right_wheel_joint']
     wheel_separation: 0.297
     wheel_radius: 0.033
-
-    # use_stamped_vel: false
-
+    use_stamped_vel: true
     # open_loop: false    
-
     # wheels_per_side: x
     # wheel_separation_multiplier: x
     # left_wheel_radius_multiplier: x
     # right_wheel_radius_multiplier: x
-
     # odom_frame_id: x
     # pose_covariance_diagonal: x
     # twist_covariance_diagonal: x
