--- a/config/twist_mux.yaml
+++ b/config/twist_mux.yaml
@@ -3,9 +3,9 @@ twist_mux:
     use_stamped: true
     topics:
       navigation:
-        topic   : cmd_vel_stamped
+        topic   : cmd_vel
         timeout : 0.5
-        priority: 100
+        priority: 10
       tracker:
         topic   : cmd_vel_tracker
         timeout : 0.5
@@ -13,9 +13,9 @@ twist_mux:
       joystick:
         topic   : cmd_vel_joy
         timeout : 0.5
-        priority: 10
+        priority: 50
 
       teleop:
         topic   : cmd_vel
         timeout : 0.5
-        priority: 50
+        priority: 100
